# Beekeeper

./: .gitmodules  LICENSE
.github/: dependabot.yml
.github/workflows/: ci.yml  releases.yml
apps/beekeeperBackend/: .gitignore  README.md  go.mod  go.sum  main.go
apps/beekeeperBackend/cmd/: main.go
apps/beekeeperBackend/config/: config.go
apps/beekeeperBackend/database/: database.go
apps/beekeeperBackend/docs/: docs.go  swagger.json  swagger.yaml
apps/beekeeperBackend/features/hives/: hives.go
apps/beekeeperBackend/features/logs/: logs.go
apps/beekeeperBackend/features/tasks/: tasks.go
apps/beekeeperBackend/internal/api/handlers/: base-handler.go  hive-handler.go  log-handler.go  task-handler.go
apps/beekeeperBackend/internal/api/models/: hive-model.go  log-model.go  task-model.go
apps/beekeeperBackend/internal/api/routes/: hive-routes.go  log-routes.go  task-routes.go
apps/beekeeperBackend/internal/config/: initialization.go
apps/beekeeperBackend/internal/database/: connection.go
apps/beekeeperBackend/internal/types/: dto.go
apps/beekeeperBackend/internal/utils/: load-env.go
apps/beekeeperBackend/models/: models.go
apps/beekeeperMobile/: .gitignore  README.md  settings.gradle.kts
apps/beekeeperMobile/app/: build.gradle.kts  proguard-rules.pro
apps/beekeeperMobile/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
apps/beekeeperMobile/gradle/: libs.versions.toml
apps/beekeeperMobile/gradle/wrapper/: gradle-wrapper.properties
apps/beekeeperMobile/models/: build.gradle  build.gradle.kts
(+51 files in other folders)
